@@ -17,6 +17,8 @@ package ghidra.server.remote;
 
 import java.io.*;
 import java.net.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.rmi.registry.LocateRegistry;
 import java.rmi.registry.Registry;
 import java.security.KeyStore.PrivateKeyEntry;
@@ -27,8 +29,10 @@ import java.util.zip.ZipInputStream;
 
 import javax.rmi.ssl.SslRMIClientSocketFactory;
 
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.RandomStringUtils;
 
+import db.buffers.DataBuffer;
 import generic.hash.HashUtilities;
 import generic.test.*;
 import ghidra.framework.Application;
@@ -92,10 +96,13 @@ public class ServerTestUtil {
 
 	private static final int SERVER_STARTUP_MAXWAIT_MS = 20000;
 
+	public static boolean enableCompressionOnServerStart = true;
+
 	private static IOThread cmdOut;
 	private static IOThread cmdErr;
 	private static Process serverProcess;
 	private static String serverRepositories;
+	private static Path argsFile;
 
 	static {
 		Runtime.getRuntime().addShutdownHook(new ShutdownHook());
@@ -413,6 +420,9 @@ public class ServerTestUtil {
 			boolean enableAltLoginName, boolean enableSSHAuthentication,
 			boolean enableAnonymousAuthentication) throws IOException {
 
+		// Set client-side compression to match server
+		DataBuffer.enableCompressedSerializationOutput(enableCompressionOnServerStart);
+
 		if (port == 0) {
 			port = GHIDRA_TEST_SERVER_PORT;
 		}
@@ -429,19 +439,16 @@ public class ServerTestUtil {
 			getTestPkiCACertsPath());
 		DefaultSSLContextInitializer.initialize(true);
 
-		ArrayList<String> argList = new ArrayList<>();
 		String javaCommand =
 			System.getProperty("java.home") + File.separator + "bin" + File.separator + "java";
-		argList.add(javaCommand);
 
+		List<String> argList = new ArrayList<>();
 		argList.add("-cp");
-		argList.add(System.getProperty("java.class.path"));
+		argList.add("\"" + System.getProperty("java.class.path").replace("\\", "/") + "\"");
 
 		argList.add("-Xmx512M");
 
-		argList.add("-Xdebug");
-		argList.add("-Xnoagent");
-		argList.add("-Djava.compiler=NONE");
+		argList.add("-Ddb.buffers.DataBuffer.compressedOutput=" + enableCompressionOnServerStart);
 		argList.add("-D" + DefaultTrustManagerFactory.GHIDRA_CACERTS_PATH_PROPERTY + "=" +
 			getTestPkiCACertsPath());
 		argList.add("-D" + DefaultKeyManagerFactory.KEYSTORE_PATH_PROPERTY + "=" +
@@ -476,25 +483,15 @@ public class ServerTestUtil {
 		argList.add("-p" + port);
 		argList.add(dirPath);
 
-		String[] args = new String[argList.size()];
-		argList.toArray(args);
-
-		System.out.println();
-		for (String arg : argList) {
-			boolean includeQuotes = arg.indexOf(' ') != -1;
-			if (includeQuotes) {
-				System.out.print("'");
-			}
-			System.out.print(arg);
-			if (includeQuotes) {
-				System.out.print("'");
-			}
-			System.out.print(" ");
-		}
-		System.out.println();
 
 		try {
-			serverProcess = Runtime.getRuntime().exec(args);
+			// Command line argument is too long on Windows, so use an @arg-file
+			argsFile =
+				Files.createTempFile(Application.getUserTempDirectory().toPath(), "args", ".txt");
+			Files.write(argsFile, argList);
+			System.out.println(javaCommand + " \"@" + argsFile + "\"");
+
+			serverProcess = new ProcessBuilder(javaCommand, "@" + argsFile).start();
 			serverRepositories = dirPath;
 
 			cmdOut = new IOThread(serverProcess.getInputStream());
@@ -651,8 +648,24 @@ public class ServerTestUtil {
 			serverRepositories = null;
 
 			if (testPkiDirectory != null) {
-				FileUtilities.deleteDir(testPkiDirectory);
-				testPkiDirectory = null;
+				try {
+					FileUtils.deleteDirectory(testPkiDirectory);
+				}
+				catch (IOException e) {
+					// Will likely be an error the next time the test starts
+					e.printStackTrace();
+				}
+				finally {
+					testPkiDirectory = null;
+				}
+			}
+		}
+		if (argsFile != null && Files.exists(argsFile)) {
+			try {
+				Files.delete(argsFile);
+			}
+			catch (IOException e) {
+				// don't care
 			}
 		}
 	}
